# nexus

./: .gitignore  AUTOCOMPLETE_IMPLEMENTATION.md  CLAUDE.md  Cargo.toml  MULTI_TARGET_PLAN.md  OUTPUT_FILE_FEATURE.md  README.md  dht.py  get_svg.sh  job_spec.md  notes.txt  old.py  pyproject.toml  test_dht.py  test_launch_screen.py
.avante_chat_history/: README.md.json  old_rust_src__main.rs.json  src__main.rs.json  src__nexus__cli.py.json  src__nexus__main.py.json  src__nexus__service__config.py.json  src__nexus__service__gpu.py.json  src__nexus__service__job.py.json  src__nexus__service__main.py.json  src__nexus__service__state.py.json  src__nexus__utils.py.json
.claude/: settings.local.json
.github/workflows/: auto-release.yml  pr-checks.yml  pyright.yml  ruff.yml  tests.yml
old_rust_src/: main.rs
src/: main.rs
src/nexus/: __init__.py  cli.py  main.py  models.py  service.py  utils.py  utils_archive.py
src/nexus/cli/: api_client.py  config.py  constants.py  jobs.py  main.py  openapi.json  setup.py  shell_completion.py  ssh_tunnel.py  tunnel_manager.py  utils.py
src/nexus/server/: __init__.py  main.py
src/nexus/service/: config.py  context.py  env.py  format.py  git.py  gpu.py  job.py  logger.py  logging.py  main.py  models.py  (+10 more)
tests/: test_service.py  test_service_endpoints.py
tests/cli/: test_git_state.py  test_shell_completion.py
tests/server/: conftest.py  test_api.py  test_db.py  test_multi_node_jobs.py  test_node_gpu_blacklisting.py  test_node_heartbeat.py  test_persistence.py
tests/service/: test_api.py  test_db.py  test_persistence.py
(+46 files in other folders)
