[project]
name = "nexus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "toml>=0.10.2",
  "termcolor>=2.5.0",
  "humanize>=4.11.0",
  "base58>=2.1.1",
  "psutil>=6.1.0",
  "pyright>=1.1.386",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
nexus = "nexus.cli:main"
